fixed layout issue for iphone

--- a/css/intlTelInput.css
+++ b/css/intlTelInput.css
@@ -135,9 +135,6 @@
     width: 13px; }
   .iti__flag.iti__va {
     width: 15px; }
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    .iti__flag {
-      background-size: 5652px 15px; } }
   .iti__flag.iti__ac {
     height: 10px;
     background-position: 0px 0px; }
@@ -919,10 +916,8 @@
   background-image: url("../img/flags.png");
   background-repeat: no-repeat;
   background-color: #DBDBDB;
-  background-position: 20px 0; }
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    .iti__flag {
-      background-image: url("../img/flags@2x.png"); } }
+  background-position: 20px 0; 
+  }
 
 .iti__flag.iti__np {
   background-color: transparent; }
